# byeee

./: .gitignore  Dockerfile  pyproject.toml
cdk.out/: byeee.assets.json  byeee.template.json  byeeeapi81CE72C5.nested.template.json  manifest.json  tree.json
cdk.out/asset.00cfecc4fc317a297e41db3c18715f495ed7e5f12dfe26e71ed636f247a62bb0/infra/: stacks.py
cdk.out/asset.140ed1319b52cb19cf3388fe9385e204bc8e9fd7a2ea5d7fb9c6b0ee20907794/: Dockerfile
cdk.out/asset.1b5906fc86e47b05bed3c398bbf4c091fd03d606d6a8da8c56c29f6c89bd72ae/: app.py
cdk.out/asset.3684bfa0814299b57c5eb46f6ba6f422b4c31d393f768500484f98892c0dd2fd/: pyproject.toml
cdk.out/asset.3684bfa0814299b57c5eb46f6ba6f422b4c31d393f768500484f98892c0dd2fd/src/: scratch.py
cdk.out/asset.38d1b99a2ceba3bdd91e90158f7f9bcdb018fc307a172b476792ef4a5899384d/: Dockerfile
cdk.out/asset.5d7197cfab0bbac0ddae65cad03180fc5605381bc04bde11111d6da1b3999486/: Dockerfile
cdk.out/asset.681c66454467a8b5e6e58f59e92d22938d637a78fa6202b00f3a7ec14fcded67/: Dockerfile
cdk.out/asset.ba911b2eb3c2a701ae13480d8c33d5f7eca9130ef270cf8d556f27583fa8f511/: Dockerfile
cdk.out/asset.cb922ab56987791be70607e202df44d98d7a3b62e3f47877b379195a2d97d92e/: Dockerfile
cdk.out/asset.cc9ea930b2fb58f68a124c04549ece3b78ca38b924178cfbca6dd08ae35a5314/: Dockerfile
cdk.out/asset.e8cee970dc9d7c2bcc7cd8b469cdc55eae434497d3412cc8bcc886f3216168ac/: app.py
cdk.out/asset.f2cedddfe6963b08fa9d7cfa170773256058daccdce767dcb673a08458d8ff31/: Dockerfile
infra/: components.py  stacks.py
src/: scratch.py
src/api/: handler.py
src/auth/: handler.py
(+30 files in other folders)
