[tool.poetry]
name = "travel"
version = "0.1.0"
description = ""
authors = ["couch-yeti <ericwb52@gmail.com>"]
readme = "README.md"

packages = [
    {include = "api", from = "src"},
    {include = "agents", from = "src/api"},
    {include = "routes", from = "src/api"},
    {include = "templates", from = "src/api"},
    {include = "auth", from = "src"},
    {include = "common", from ="src"}
]

[tool.poetry.dependencies]
python = "^3.10"
aws-cdk-lib = "^2.116.1"
mangum = "^0.17.0"
fastapi = "^0.105.0"
pyjwt = "^2.8.0"
aws-lambda-powertools = "^2.34.1"
openai = "^1.12.0"
python-dotenv = "^1.0.1"
langchain = "^0.1.9"
langchain-community = "^0.0.25"
langchain-openai = "^0.0.8"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
boto3 = "^1.34.7"
uvicorn = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
